<resources>
    <string name="app_name">QuizTemplate</string>

    <string name="google_web_id">61346240286-g76lail2vo3okovfi8thef20dn31eo7f.apps.googleusercontent.com</string>
    <string name="facebook_app_id">2272417339703913</string>
    <string name="fb_login_protocol_scheme">fb2272417339703913</string>

    <string name="some_text">some text</string>
    <string name="login_with_social">login with social media</string>
    <string name="continue_without_savings">or\n continue without savings</string>
    <string name="offline">anonimus mode</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_in">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="top_100">Top 100</string>
    <string name="statistics">Statistics</string>
    <string name="create">Create questions</string>
    <string name="settings">Settings</string>
    <string name="no_internet">no internet connection</string>
    <string name="success">Sign in successful</string>
    <string name="failed">Sign in failed</string>
    <string name="log_out">log out</string>
    <string name="welcome_back">Welcome back</string>
    <string name="new_game">New Game</string>
    <string name="_0">0</string>
    <string name="_1_30">1/30</string>
    <string name="answer_a">Answer_A</string>
    <string name="answer_b">Answer_B</string>
    <string name="answer_c">Answer_C</string>
    <string name="answer_d">Answer_D</string>
    <string name="available_funds">available funds</string>

    <string name="ok">ок</string>
    <string name="set_duration_per_question">Set duration per question…</string>
    <string name="set_up_notification">Set up reminder notification time</string>

    <string name="default_time">Question time</string>
    <string name="seconds">seconds</string>

    <string name="time_for_question">Time per question </string>

    <string name="play_on_time_on">Game on time enabled</string>
    <string name="play_on_time_off">Game on time disabled</string>

    <string name="nightModeOn">Dark mode ON</string>
    <string name="nightModeOff">Dark mode OFF</string>

    <string name="sound_on">Sound is ON</string>
    <string name="sound_off">Sound is OFF</string>


    <string name="close">close</string>
    <string name="hint">hint</string>
    <string name="unlock_hint">Unlock for 20 credits</string>
    <string name="get_200">get 200 credits</string>
    <string name="user_name">Player</string>
    <string name="score_txt">Score</string>
    <string name="empty">here is empty up to now</string>
    <string name="delete_statistics">delete_statistics</string>
    <string name="date">Date</string>
    <string name="add">+</string>
    <string name="send_report">send report</string>
    <string name="enter_your_message">enter your message</string>
    <string name="empty_message">this message must be filled</string>
    <string name="message_sent">message sent</string>
    <string name="enter_your_question">Enter your question</string>
    <string name="enter_image_description">Enter image description</string>
    <string name="add_image"> add image</string>
    <string name="enter_your_hint">Enter your hint</string>
    <string name="answer_1">1</string>
    <string name="answer_2">2</string>
    <string name="answer_3">3</string>
    <string name="answer_4">4</string>
    <string name="add_question">add question</string>
    <string name="multiplayer">MULTIPLAYER</string>
    <string name="create_quiz">CREATE QUIZ</string>
    <string name="is_image_question">Image Question</string>
    <string name="is_text_question">Text Question</string>
    <string name="pick_image_from_phone">pick image from phone</string>
    <string name="upload_image">upload image</string>
    <string name="loading">upload image…</string>
    <string name="progress">loaded</string>
    <string name="select_the_correct_answer">select the correct answer:</string>
    <string name="select_category">Select the category</string>
    <string name="Question">Question</string>
    <string name="Answers">Answers</string>
    <string name="Hint">Hint</string>
    <string name="not_filled">All fields should be filled</string>
    <string name="success_question_add">Success! Now add question if everything is correct</string>
    <string name="question_in_quee">the question has been added successfully</string>
    <string name="your_suggestion">Your suggestions</string>
    <string name="delete">Delete</string>
    <string name="removeFromList">Question was removed from suggestions</string>
    <string name="undo">UNDO</string>
    <string name="play_random">Play with random person</string>
    <string name="invite_friend">Invite friend to play with you</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="username">Your name</string>
    <string name="create_password">Create password</string>
    <string name="create_account">create account</string>
    <string name="email_required">Email is required</string>
    <string name="username_required">Name is required</string>
    <string name="password_required">password is required</string>
    <string name="email_not_valid">email is not valid</string>
    <string name="add_avatar">Please, add avatar</string>
    <string name="password">Password</string>

</resources>
