<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.StatisticsFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/header"
                android:weightSum="2"
                android:layout_margin="8dp"
                android:orientation="horizontal"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="@string/date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textAlignment="textEnd"
                    android:text="@string/score_txt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

            </LinearLayout>


                    <android.support.v7.widget.RecyclerView
                        android:layout_below="@+id/header"
                        android:layout_above="@+id/suggestedQuestionCard"
                        android:id="@+id/recycler_statistics"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

            <TextView
                android:layout_centerInParent="true"
                android:id="@+id/empty_recyclerTxt"
                android:text="@string/empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.CardView
                android:layout_margin="2dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:elevation="8dp"
                android:id="@+id/suggestedQuestionCard"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UnusedAttribute">

                <ImageView
                    android:layout_margin="8dp"
                    android:layout_gravity="start"
                    android:src="@drawable/good"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/app_name" />

                <TextView
                    android:textSize="20sp"
                    android:text="@string/your_suggestion"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </android.support.v7.widget.CardView>

                </RelativeLayout>



</FrameLayout>