<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

           <Button
               android:id="@+id/button_unlock_hint"
               android:text="@string/unlock_hint"
               android:textSize="18sp"
               android:drawableEnd="@drawable/poor"
               android:drawableRight="@drawable/poor"
               android:background="@drawable/btn_transparent"
               android:layout_margin="16dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/button_rewards"
                android:text="@string/get_200"
                android:textSize="18sp"
                android:drawableStart="@drawable/get_money"
                android:drawableLeft="@drawable/get_money"
                android:background="@drawable/btn_transparent"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/app_name"
                android:layout_margin="16dp"
                android:id="@+id/hint_txt"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>