<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/header"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Spinner
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:layout_margin="2dp"
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_below="@+id/header"
        android:id="@+id/question_card"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_centerHorizontal="true"
        android:layout_margin="2dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/question_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/app_name" />


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:id="@+id/scale_imageBtn"
                        android:layout_width="36dp"
                        android:layout_height="46dp"
                        android:background="@android:color/transparent"
                        android:src="@drawable/search"
                        android:foreground="?android:attr/selectableItemBackground"
                        android:focusable="true"
                        android:clickable="true"
                        tools:ignore="RtlCompat,UnusedAttribute"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/question_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="22sp"/>

                </RelativeLayout>

            </ScrollView>

            <TextView
                android:textSize="32sp"
                android:id="@+id/questionCenterTxt"
                android:layout_centerInParent="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@android:color/white"
                android:background="#80242323"
                android:id="@+id/image_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textAlignment="center"
                android:textSize="20sp"/>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

        <ScrollView
            android:id="@+id/questionsScroll"
            android:layout_below="@+id/question_card"
            android:layout_above="@+id/progress_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:background="@drawable/btn_transparent"
                    android:id="@+id/answerABtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/answer_a"
                    android:textAlignment="center" />

                <Button
                    android:background="@drawable/btn_transparent"
                    android:id="@+id/answerBBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/answerABtn"
                    android:layout_margin="2dp"
                    android:text="@string/answer_b"
                    android:textAlignment="center" />

                <Button
                    android:background="@drawable/btn_transparent"
                    android:id="@+id/answerCBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answerBBtn"
                    android:layout_margin="2dp"
                    android:text="@string/answer_c"
                    android:textAlignment="center" />

                <Button
                    android:background="@drawable/btn_transparent"
                    android:id="@+id/answerDBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answerCBtn"
                    android:layout_margin="2dp"
                    android:text="@string/answer_d"
                    android:textAlignment="center" />

            </RelativeLayout>

        </ScrollView>

        <android.support.v7.widget.CardView
            android:layout_margin="2dp"
            android:id="@+id/progress_layout"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <Button
                    android:background="@drawable/btn_transparent"
                    android:id="@+id/hintBtn"
                    android:text="@string/hint"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content" />

                <Button
                    android:background="@drawable/btn_transparent"
                    android:id="@+id/confirmBtn"
                    android:text="@string/add_question"
                    android:layout_width="0dp"
                    android:layout_weight="5"
                    android:layout_height="wrap_content" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


    </RelativeLayout>

