<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Tabs.TabAnswers">

    <android.support.v7.widget.CardView
        android:elevation="8dp"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        tools:ignore="UnusedAttribute">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/bottom">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/edtAnswerA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/answer_1"
                        android:minLines="1"
                        android:maxLines="10"/>

                    <EditText
                        android:id="@+id/edtAnswerB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/answer_2"
                        android:minLines="1"
                        android:maxLines="10"/>

                    <EditText
                        android:id="@+id/edtAnswerC"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/answer_3"
                        android:minLines="1"
                        android:maxLines="10"/>

                    <EditText
                        android:id="@+id/edtAnswerD"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:hint="@string/answer_4"
                        android:minLines="1"
                        android:maxLines="10"/>



                </LinearLayout>


            </ScrollView>

            <LinearLayout
                android:orientation="vertical"
                android:id="@+id/bottom"
                android:layout_alignParentBottom="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_margin="8dp"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:text="@string/select_the_correct_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:layout_margin="2dp"
                        android:id="@+id/radioAnswerA"
                        android:text="@string/answer_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UnusedAttribute" />

                    <RadioButton
                        android:layout_gravity="start"
                        android:layout_margin="2dp"
                        android:id="@+id/radioAnswerB"
                        android:text="@string/answer_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UnusedAttribute" />

                    <RadioButton
                        android:layout_gravity="start"
                        android:layout_margin="2dp"
                        android:id="@+id/radioAnswerC"
                        android:text="@string/answer_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UnusedAttribute" />

                    <RadioButton
                        android:layout_gravity="start"
                        android:layout_margin="2dp"
                        android:id="@+id/radioAnswerD"
                        android:text="@string/answer_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:ignore="UnusedAttribute" />

                </RadioGroup>

            </LinearLayout>

        </RelativeLayout>






    </android.support.v7.widget.CardView>



</FrameLayout>