<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Tabs.TabQuestion">

    <android.support.v7.widget.CardView
        android:layout_margin="8dp"
        android:id="@+id/question_card"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/header"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/imageSwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/imageSwitchTxt"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/imageQuestionLayout"
                android:layout_below="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_above="@+id/edtImageQuestion"
                    android:id="@+id/question_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/app_name" />

                <EditText
                    android:id="@+id/edtImageQuestion"
                    android:hint="@string/enter_your_question"
                    android:minLines="1"
                    android:maxLines="5"
                    android:layout_above="@+id/imageUploadBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                   android:layout_alignParentBottom="true"
                    android:id="@+id/imageUploadBtn"
                    android:layout_centerInParent="true"
                    android:text="@string/add_image"
                    android:background="@drawable/btn_transparent"
                    android:layout_margin="2dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/textQuestionLayout"
                android:layout_below="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                android:id="@+id/edtQuestion"
                android:hint="@string/enter_your_question"
                android:minLines="1"
                android:maxLines="100"
                android:layout_centerInParent="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            </RelativeLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</FrameLayout>